<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:src="@drawable/coffee"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="95dp"
            android:selectAllOnFocus="true"
            android:textSize="36sp"
            android:textColor="@color/black"
            android:autofillHints="name"
            android:inputType="textCapWords"
            android:hint="@string/login"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="36sp"
            android:textColor="@color/black"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="36sp"
            android:textColor="@color/black"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_gravity="center"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/createorder"
            android:onClick="CreateOrder"
            android:textSize="36sp"
            android:layout_gravity="center"/>
    </LinearLayout>
</RelativeLayout>